--- a/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
+++ b/InvestmentTracker/Pages/Shared/_NavigationPartial.cshtml
@@ -33,6 +33,9 @@
         <li class="nav-item">
             <a class="nav-link" asp-area="" asp-page="/Expenses/FinancialScheduleConfig">Schedule Settings</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-page="/Expenses/ImportProfiles/Index">Import Profiles</a>
+        </li>
     }
     else if (isInvestmentsSection)
     {
